trying to improve the max memory for unittests